Menu bar no longer overlaps other elements when it's collapsed
Renamed 'demoexamples' to 'navigation_buttons'.

Also some whitespace changes.

--- a/style.css
+++ b/style.css
@@ -165,3 +165,7 @@ td.ellipsis {
   font-weight: bold;
   font-size: 18px;
 }
+
+.navbar {
+   padding: 10px 100px 10px 10px;
+}
